donation plan added

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+    <link rel="shortcut icon" href="./icons/icons8-donation-64.png" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -20,7 +21,7 @@
     </div>
     <div class="donation-container">
         <div class="donation-info">
-            <h3>Donate Today</h3>
+            <h3 class="donation-title">Donate Today</h3>
             <p class="text donation-text">If all of us donated very little to the poor people, then 25000 people would not die of hunger every day.</p>
         </div>
         <div class="donation-amount">
@@ -33,6 +34,29 @@
         <div class="donation-input">
             <input class="donatation-textfield" type="text" placeholder="Other Amount (Taka)"><br><br><br><br>
             <a class="donnate-btn" href="#" target="_blank">Donate Now</a>
+        </div>
+    </div>
+    <div class="donation-plan">
+        <div class="donation-plan-info">
+            <h3 class="donation-title">Our Donate Plan</h3>
+            <p class="text donation-text">Currently, we are working with the flood affected people in Sylhet. We are collecting relief from various places and trying to reach that to the flood affected people.</p>
+        </div>
+        <div class="donation-catagory">
+            <div class="donation-field donate-food">
+                <img src="./icons/food.png" alt="food">
+                <h5>Food for a family</h5>
+                <p>In world wide, 11.3% population is hungry. On the otherhand, 17% of total global food is wasted. Think about it. Help those people who are hunger.</p>
+            </div>
+            <div class="donation-field donate-shelter">
+                <img src="./icons/shelter.png" alt="family">
+                <h5>Shelter for a family</h5>
+                <p>At present, 150 million people around the world are living in homelessness. Many more people have become homeless due to the Kabit-19 crisis. With the cooperation of everyone, the homeless people can get shelter.</p>
+            </div>
+            <div class="donation-field donate-eduaction">
+                <img src="./icons/Frame-1.png" alt="education">
+                <h5>Education for a child</h5>
+                <p>Around 1 in 5 people are completely iliterate. We know that"The more educated a nation is, the more developed it is." So, donate for childern to educate. Today's children are the future of tomorrow.<p>
+            </div>
         </div>
     </div>
 </body>
