--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
     <title>Save the World</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&family=Lobster&display=swap" rel="stylesheet">
     <link rel="shortcut icon" href="./icons/icons8-donation-64.png" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="banner-container">
         <div class="banner-description">
-            <h1>Help The People, Save The World</h1>
+            <h1>Help The People, Save The World!</h1>
             <p class="text">When you help or danate those people who needs more, you will feel a personal satisfaction and growth. It feels good to donate or help poor people.</p>
             <a class="donnate-btn" href="#" target="_blank">Donate Now</a>
         </div>
@@ -59,5 +59,11 @@
             </div>
         </div>
     </div>
+    <footer>
+        <div class="footer-section">
+            <h3>Be Humble</h3>
+            <p>I’m gonna do it</p>
+        </div>
+    </footer>
 </body>
 </html>
