update donation part added

--- a/index.html
+++ b/index.html
@@ -59,6 +59,15 @@
             </div>
         </div>
     </div>
+    <div class="update-container">
+        <div class="donation-plan-info update-top-side">
+            <h3 class="donation-title">Get My Updates</h3>
+            <p class="text donation-text update-text">If anyone want to know our event update, wright your email. We will notify you. Or getting any information feel free to email us.</p>
+        </div>
+        <form id="form-container" action="">
+            <input class="email-textfield" type="email" placeholder="Email"><a class="subcribe-btn" href="#">Subscribe</a>
+        </form>
+    </div>
     <footer>
         <div class="footer-section">
             <h3>Be Humble</h3>
