news section added

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <!-- banner section -->
     <div class="banner-container">
         <div class="banner-description">
             <h1>Help The People, Save The World!</h1>
@@ -19,6 +20,8 @@
             <a class="donnate-btn" href="#" target="_blank">Donate Now</a>
         </div>
     </div>
+
+    <!-- donation section -->
     <div class="donation-container">
         <div class="donation-info">
             <h3 class="donation-title">Donate Today</h3>
@@ -36,6 +39,8 @@
             <a class="donnate-btn" href="#" target="_blank">Donate Now</a>
         </div>
     </div>
+
+    <!-- donation plan section -->
     <div class="donation-plan">
         <div class="donation-plan-info">
             <h3 class="donation-title">Our Donate Plan</h3>
@@ -59,15 +64,45 @@
             </div>
         </div>
     </div>
+
+    <!-- donation news section -->
+    <div class="donation-news-container">
+        <h2>News</h2>
+        <div id="underline"></div>
+        <div class="donation-news">
+            <div class="news-box">
+                <img src="./images/20anniv-homepage-callout.jpg" alt="movie">
+                <h6>View the Film Series</h6>
+                <p>GlobalGiving launched a short film series, "Community Forward," during our 20th Anniversary event.</p>
+                <a href="#">WATCH NOW&nbsp;&nbsp;></a>
+            </div>
+            <div class="news-box">
+                <img src="./images/crisis_response_homepage.jpeg" alt="children">
+                <h6>Bringing Hope To Every Crisis</h6>
+                <p>Every person, family, and country affected by crisis deserves our attention and support. Our disaster response director introduces a new way for you to make a difference.</p>
+                <a href="#">LEARN MORE&nbsp;&nbsp;></a>
+            </div>
+            <div class="news-box">
+                <img src="./images/hiring-2019.jpg" alt="hiring">
+                <h6>We're Hiring</h6>
+                <p>Join our amazing team and help people around the world.</p>
+                <a href="#">VIEW JOBS&nbsp;&nbsp;></a>
+            </div>
+        </div>
+    </div>
+
+    <!-- update section -->
     <div class="update-container">
         <div class="donation-plan-info update-top-side">
             <h3 class="donation-title">Get My Updates</h3>
-            <p class="text donation-text update-text">If anyone want to know our event update, wright your email. We will notify you. Or getting any information feel free to email us.</p>
+            <p class="text donation-text update-text">If anyone want to get our event update, wright your email here. We will notify you or getting any information feel free to email us.</p>
         </div>
         <form id="form-container" action="">
             <input class="email-textfield" type="email" placeholder="Email"><a class="subcribe-btn" href="#">Subscribe</a>
         </form>
     </div>
+
+    <!-- footer section -->
     <footer>
         <div class="footer-section">
             <h3>Be Humble</h3>
