donation partner added

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="banner-container">
         <div class="banner-description">
             <h1>Help The People, Save The World!</h1>
-            <p class="text">When you help or danate those people who needs more, you will feel a personal satisfaction and growth. It feels good to donate or help poor people.</p>
+            <p class="text">When you help or danate those people who needs more, you will feel a personal satisfaction and growth. It feels good to donate or help the poor people.</p>
             <a class="donnate-btn" href="#" target="_blank">Donate Now</a>
         </div>
     </div>
@@ -73,20 +73,44 @@
             <div class="news-box">
                 <img src="./images/20anniv-homepage-callout.jpg" alt="movie">
                 <h6>View the Film Series</h6>
-                <p>GlobalGiving launched a short film series, "Community Forward," during our 20th Anniversary event.</p>
+                <p class="news-box-text">GlobalGiving launched a short film series, "Community Forward," during our 20th Anniversary event.</p>
                 <a href="#">WATCH NOW&nbsp;&nbsp;></a>
             </div>
             <div class="news-box">
                 <img src="./images/crisis_response_homepage.jpeg" alt="children">
                 <h6>Bringing Hope To Every Crisis</h6>
-                <p>Every person, family, and country affected by crisis deserves our attention and support. Our disaster response director introduces a new way for you to make a difference.</p>
+                <p class="news-box-text">Every person, family, and country affected by crisis deserves our attention and support. Our disaster response director introduces a new way for you to make a difference.</p>
                 <a href="#">LEARN MORE&nbsp;&nbsp;></a>
             </div>
             <div class="news-box">
                 <img src="./images/hiring-2019.jpg" alt="hiring">
                 <h6>We're Hiring</h6>
-                <p>Join our amazing team and help people around the world.</p>
+                <p class="news-box-text">Join our amazing team and help people around the world.</p>
                 <a href="#">VIEW JOBS&nbsp;&nbsp;></a>
+            </div>
+        </div>
+    </div>
+
+    <!-- donation partner -->
+    <div class="partner-container">
+        <div class="donation-partner">
+            <div class="partner-info partner-text">
+                <h2>Our Donation Partners</h2>
+                <div class="parter-underline"></div>
+                <p class="partner-about">We've made it possible for more than <span>490 companies to support local causes around the world.</span> We help companies expand their philanthropic footprint with global nonprofit vetting, grantmaking, charitable gift cards, and digital campaigns to power cause marketing, disaster response, and employee giving.</p>
+            </div>
+            <div class="partner-logo">
+                <div class="partner-top">
+                    <img src="./icons/partner-01.png" alt="parter">
+                </div>
+                <div class="partner-buttom">
+                    <div class="image-top">
+                        <img src="./icons/partner-02.png" alt="parter">
+                    </div>
+                    <div class="image-buttom">
+                        <img src="./icons/partner-03.png" alt="parter">
+                    </div>
+                </div>
             </div>
         </div>
     </div>
@@ -95,7 +119,7 @@
     <div class="update-container">
         <div class="donation-plan-info update-top-side">
             <h3 class="donation-title">Get My Updates</h3>
-            <p class="text donation-text update-text">If anyone want to get our event update, wright your email here. We will notify you or getting any information feel free to email us.</p>
+            <p class="text donation-text update-text">If anyone want to get our event update, write your email here. We will notify you or getting any information feel free to email us.</p>
         </div>
         <form id="form-container" action="">
             <input class="email-textfield" type="email" placeholder="Email"><a class="subcribe-btn" href="#">Subscribe</a>
