updated some fetures

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
             <p class="text donation-text update-text">If anyone want to get our event update, write your email here. We will notify you or getting any information feel free to email us.</p>
         </div>
         <form id="form-container" action="">
-            <input class="email-textfield" type="email" placeholder="Email"><a class="subcribe-btn" href="#">Subscribe</a>
+            <input class="email-textfield" type="email" placeholder="Email"><a class="subcribe-btn" href="#" target="_blank">Subscribe</a>
         </form>
     </div>
 
